feat: finish game dev

--- a/pigGame/index.html
+++ b/pigGame/index.html
@@ -26,7 +26,7 @@
         </div>
       </section>
 
-      <img src="dice1.png" alt="Playing dice" class="dice" />
+      <img src="dice1.png" alt="Playing dice" class="dice hidden" />
       <button class="btn btn--new">🐷 Новая игра</button>
       <button class="btn btn--roll">🎲 Бросить кубик</button>
       <button class="btn btn--hold">👌 Оставить</button>
