--- a/Работа С Массивами/index.html
+++ b/Работа С Массивами/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Структуры Данных И Строки В Современном JavaScript</title>
+    <title>Работа С Массивами</title>
   </head>
   <body>
-    <h2>Структуры Данных И Строки В Современном JavaScript</h2>
+    <h2>Работа С Массивами</h2>
 
     <script src="script.js"></script>
-    <script src="project.js"></script>
   </body>
 </html>
