--- a/Больше О Функциях/index.html
+++ b/Больше О Функциях/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Структуры Данных И Строки В Современном JavaScript</title>
+    <title>Больше О Функциях</title>
   </head>
   <body>
-    <h2>Структуры Данных И Строки В Современном JavaScript</h2>
+    <h2>Больше О Функциях</h2>
+    <button id="purchase">Purchase Airplain</button>
+    <button id="survey">Take Survey</button>
 
     <script src="script.js"></script>
-    <script src="project.js"></script>
   </body>
 </html>
