--- a/cardioApp/index.html
+++ b/cardioApp/index.html
@@ -84,7 +84,7 @@
           <div class="workout__details">
             <span class="workout__icon">📏⏱</span>
             <span class="workout__value">238</span>
-            <span class="workout__unit">м/мин</span>
+            <span class="workout__unit">мин/км</span>
           </div>
           <div class="workout__details">
             <span class="workout__icon">👟⏱</span>
@@ -117,19 +117,6 @@
           </div>
         </li> -->
       </ul>
-
-      <p class="footer__copyright">
-        НЕ ТЕРЯЙ ВРЕМЯ И СТРОЙ СВОЕ БУДУЩЕЕ СЕЙЧАС
-      </p>
-      <p class="footer__copyright">
-        &copy;
-        <a
-          class="footer__link masters-of-code-link"
-          target="_blank"
-          href="https://masters-of-code.com/"
-          >Masters Of Code</a
-        >.
-      </p>
     </div>
 
     <div id="map"></div>
